<resources>
    <string name="app_name">InventoryApp</string>
    <string name="add_button">Add data</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="sup_name">Supplier name</string>
    <string name="phone">Supplier phone number</string>
    <string name="save_button">Save</string>
</resources>
